style: apply spotless formatting across modules